# Intelligent-Control-System-For-Hybrid-Power-Units

./: ICU.cabal  README.md  stack.yaml
app/: Main.hs
src/: Start.hs
src/Commons/: ColoredOutput.hs  Currency.hs  ISUnits.hs  Threading.hs  UnitShow.hs  Utilities.hs
src/GearboxDynamics/: Gearbox.hs  GearboxDynamics.hs
src/Itinerary/: Itinerary.hs  ProcessedItinerary.hs
src/Itinerary/Parser/: Grammar.hs  Grammar.y  MainParser.hs  Tokens.hs  Tokens.x  UnexItinerary.hs
src/KNNRegression/: KNN.hs  KNNConfig.hs  KNNRegressionClass.hs
src/MultivariateRegression/: MultivariateRegression.hs
src/PowerUnit/: PowerUnit.hs  PowerUnitCostCalculator.hs  PowerUnitTypes.hs  PredictionStrategy.hs
src/PowerUnit/EPowerUnit/: EEngine.hs  EPowerUnit.hs  EPowerUnitEfficiencyModeller.hs  EPowerUnitEfficiencyRetrieval.hs  EPowerUnitType.hs  ETel.hs  ETelInputNode.hs  Electricity.hs
src/PowerUnit/EPowerUnit/Regen/: RTel.hs  RTelInputNode.hs  RegenEfficiencyModeller.hs  RegenEfficiencyRetrieval.hs
src/PowerUnit/ICPowerUnit/: ICEngine.hs  ICPowerUnit.hs  ICPowerUnitEfficiencyModeller.hs  ICPowerUnitEfficiencyRetrieval.hs  ICPowerUnitType.hs  ICTel.hs  ICTelInputNode.hs
src/PowerUnit/ICPowerUnit/Fuel/: Fuel.hs  FuelConsts.hs
src/Searches/: BruteForceProgressive.hs  Commons.hs  Genetic.hs  Greedy.hs  NoHybridSimulated.hs  Simulated.hs  Solution.hs
src/Vehicle/: Vehicle.hs  VehicleState.hs
src/Vehicle/VehicleConsts/: BMWi3Consts.hs  Fiat500Consts.hs  FordFusionV6Consts.hs  NissanLeafConsts.hs
src/Vehicle/VehicleConsts/TestVehicles/: TestVehicle.hs
src/VehicleDynamics/: AeroDrag.hs  RoadLoad.hs  VehicleDynamics.hs  VehiclePhysics.hs
test/: EEngine.hs  EEngineBMWi3.hs  EEngineNissanLeaf.hs  EEngineRegen.hs  Gearbox.hs  ICEngine.hs  ICEngineFiat500.hs  ICEngineFordFusionV6.hs  MyChartMaker.hs  Regen.hs  RoadUnit.hs  Spec.hs  SteadyPace.hs  multirunOnGenetic.sh
test/Itineraries/: Itinerary3.iti  Itinerary7.iti
test/Res/GeneticSearch/_ProblemScripts/Problem1/: Itinerary.txt  SimulatedResould.txt  VehicleConfig.txt
test/Res/GeneticSearch/_ProblemScripts/Problem2/: SimulatedResould.txt  VehicleConfig.txt
test/Res/GeneticSearch/_ProblemScripts/Problem3/: SimulatedResould.txt  VehicleConfig.txt
test/Res/GeneticSearch/_ProblemScripts/Problem4/: Itinerary.txt  SimulatedResould.txt
test/Res/GeneticSearch/_ProblemScripts/Problem5/: SimulatedResould.txt  VehicleConfig.txt
test/Res/GeneticSearch/_ProblemScripts/Problem6/: SimulatedResould.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario1/: SimulatedResult.txt
test/Res/InContextPerformances/Scenario1/Genetics/Run1/: GADebug.csv  GAOutput.txt
test/Res/InContextPerformances/Scenario1/Genetics/Run2/: GADebug.csv  GAOutput.txt
test/Res/InContextPerformances/Scenario10/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario11/: 0_Itinerary.txt  NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario12/: SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario13/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario14/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario15/: SimulatedResult.txt
test/Res/InContextPerformances/Scenario16/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario17/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario18/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario19/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario2/: 0_Itinerary.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario20/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario21/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario22/: NoHybridSimulatedResult.txt  SimulatedResult.txt
test/Res/InContextPerformances/Scenario23/: 0_Itinerary.txt  NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario24/: NoHybridSimulatedResult.txt  SimulatedResult.txt
test/Res/InContextPerformances/Scenario25/: SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario26/: 0_Itinerary.txt  NoHybridSimulatedResult.txt
test/Res/InContextPerformances/Scenario27/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario28/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario29/: NoHybridSimulatedResult.txt  SimulatedResult.txt
test/Res/InContextPerformances/Scenario3/: SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario30/: NoHybridSimulatedResult.txt  SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario4/: SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario5/: SimulatedResult.txt
test/Res/InContextPerformances/Scenario6/: SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario7/: SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario8/: SimulatedResult.txt  VehicleConfig.txt
test/Res/InContextPerformances/Scenario9/: SimulatedResult.txt
test/Res/PythonGraphers/: GeneticSearch.py  SolutionTests.py
(+957 files in other folders)
